# rso-bots

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml
src/: main.py
src/bot/: bot_manager.py  game_client.py  service.py  strategy.py
src/config/: settings.py
src/proto/: bot.proto  bot_pb2.py  bot_pb2_grpc.py
tests/: conftest.py  test_bot.py  test_integration.py
tests/bot/: test_manager.py  test_service.py
