[project]
name = "rso-bots"
version = "0.1.0"
description = "Bot service for RSO game"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.68.1",
    "protobuf>=5.29.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
